demo/hotrod/01-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotrod
  namespace: hotrod
spec:
  selector:
    matchLabels:
      app: hotrod
  template:
    metadata:
      labels:
        app: hotrod
    spec:
      containers:
      - image: jaegertracing/example-hotrod:1.16
        name: hotrod
        ports:
        - containerPort: 8080
