demo/hotrod/01-hotrod.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotrod
  namespace: hotrod
spec:
  selector:
    matchLabels:
      app: hotrod
  template:
    metadata:
      labels:
        app: hotrod
    spec:
      containers:
      - image: jaegertracing/example-hotrod:1.13
        name: hotrod
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hotrod
  namespace: hotrod
  labels:
    app: hotrod
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: hotrod
  selector:
    app: hotrod
