demo/hotrod/02-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hotrod
  namespace: hotrod
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: Host(`hotrod.meetup.containous.tech`)
      services:
        - name: hotrod
          port: 8080
      # middlewares:
      #   - name: https-redirect
      #     namespace: traefikee

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hotrod-tls
  namespace: hotrod
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`hotrod.meetup.containous.tech`)
      services:
        - name: hotrod
          port: 8080
  tls:
    certResolver: default
